# Deformable-Snow-Simulation

./: .gitattributes  .gitignore  .gitmodules  README.md
DeformableSnow/: Application.cpp  Application.hpp  CMakeLists.txt  DeformableSnow.vcxproj  DeformableSnow.vcxproj.filters  DeformableSnowSimulation.sln  FileSystem.cpp  FileSystem.hpp  Logger.cpp  Logger.hpp  NonCopyable.hpp  Obfuscator.hpp  SnowApplication.cpp  SnowApplication.hpp  Util.cpp  Util.hpp  main.cpp
DeformableSnow/Builds/CMake/: CompileOptions.cmake
DeformableSnow/DeformableSnow/: CMakeLists.txt  DeformableSnow.vcxproj  DeformableSnow.vcxproj.filters
DeformableSnow/DeformableSnow/Includes/: DeformableSnow.h  ToonArrayObject.cpp  ToonArrayObject.h  ToonBaseObject.h  ToonBitwise.h  ToonBufferObject.h  ToonCamera.h  ToonColor.h  ToonDynamicMesh.h  ToonEffect.h  ToonExceptions.h  ToonFilesystem.h  ToonFormat.h  ToonHeaderPostfix.h  ToonHeaderPrefix.h  ToonIndexBufferObject.h  ToonInputSystem.h  ToonLogger.h  ToonMaterial.h  ToonMesh.h  ToonNoiseGenerator.h  ToonNoncopyable.h  ToonObject.h  ToonPlatform.h  ToonPrerequisites.h  ToonRenderSystem.h  ToonRoot.h  ToonSingleton.h  ToonStaticCamera.h  ToonStaticMesh.h  ToonTexture.h  ToonTimer.h  ToonVertexBufferObject.h
DeformableSnow/DeformableSnow/Precompiled/: stdafx.cpp  stdafx.h
DeformableSnow/DeformableSnow/Sources/: DeformableSnow.cpp  DynamicMesh.cpp  ToonArrayObject.cpp  ToonBufferObject.cpp  ToonCamera.cpp  ToonColor.cpp  ToonEffect.cpp  ToonFilesystem.cpp  ToonFormat.cpp  ToonIndexBufferObject.cpp  ToonInputSystem.cpp  ToonLogger.cpp  ToonMesh.cpp  ToonObject.cpp  ToonRenderSystem.cpp  ToonRoot.cpp  ToonStaticCamera.cpp  ToonStaticMesh.cpp  ToonTimer.cpp  ToonVertexBufferObject.cpp  main.cpp
DeformableSnow/Libraries/GL/GLFX/: glfx.h
DeformableSnow/Libraries/libs/fmt/: fmtd.lib
DeformableSnow/Libraries/libs/nvidia/: nvToolsExt64_1.lib
DeformableSnow/Libraries/libs/opengl/: glfw3.lib  glfw3d.lib  glfx.lib
DeformableSnow/Libraries/libs/physx/checked/: FastXml_static_64.lib  LowLevelAABB_static_64.lib  LowLevelDynamics_static_64.lib  LowLevel_static_64.lib  PhysXCharacterKinematic_static_64.lib  PhysXCooking_64.lib  PhysXExtensions_static_64.lib  PhysXPvdSDK_static_64.lib  PhysXTask_static_64.lib  PhysXVehicle_static_64.lib  PhysX_64.lib  SampleBase_static_64.lib  SampleFramework_static_64.lib  SamplePlatform_static_64.lib  SampleRenderer_static_64.lib  SamplesToolkit_static_64.lib  SceneQuery_static_64.lib  SimulationController_static_64.lib  SnippetRender_static_64.lib  SnippetUtils_static_64.lib
DeformableSnow/Libraries/libs/physx/debug-lib/: FastXml_static_64.lib  LowLevelAABB_static_64.lib  LowLevelDynamics_static_64.lib  LowLevel_static_64.lib  PhysXCharacterKinematic_static_64.lib  PhysXCommon_64.lib  PhysXExtensions_static_64.lib  PhysXFoundation_64.lib  PhysXPvdSDK_static_64.lib  PhysXTask_static_64.lib  PhysXVehicle_static_64.lib  SampleBase_static_64.lib  SampleFramework_static_64.lib  SamplePlatform_static_64.lib  SampleRenderer_static_64.lib  SamplesToolkit_static_64.lib  Samples_64.lib  SceneQuery_static_64.lib  SimulationController_static_64.lib  SnippetRender_static_64.lib  SnippetUtils_static_64.lib
DeformableSnow/Libraries/libs/physx/profile/: FastXml_static_64.lib  LowLevelAABB_static_64.lib  LowLevelDynamics_static_64.lib  LowLevel_static_64.lib  PhysXCharacterKinematic_static_64.lib  PhysXCooking_64.lib  PhysXExtensions_static_64.lib  PhysXFoundation_64.lib  PhysXPvdSDK_static_64.lib  PhysXTask_static_64.lib  PhysXVehicle_static_64.lib  SampleBase_static_64.lib  SampleFramework_static_64.lib  SamplePlatform_static_64.lib  SampleRenderer_static_64.lib  SamplesToolkit_static_64.lib  SceneQuery_static_64.lib  SimulationController_static_64.lib  SnippetRender_static_64.lib  SnippetUtils_static_64.lib
DeformableSnow/Libraries/libs/physx/release-lib/: FastXml_static_64.lib  LowLevelAABB_static_64.lib  LowLevelDynamics_static_64.lib  LowLevel_static_64.lib  PhysXCharacterKinematic_static_64.lib  PhysXCommon_64.lib  PhysXExtensions_static_64.lib  PhysXPvdSDK_static_64.lib  PhysXTask_static_64.lib  PhysXVehicle_static_64.lib  PhysX_64.lib  SampleBase_static_64.lib  SampleFramework_static_64.lib  SamplePlatform_static_64.lib  SampleRenderer_static_64.lib  SamplesToolkit_static_64.lib  SceneQuery_static_64.lib  SimulationController_static_64.lib  SnippetRender_static_64.lib  SnippetUtils_static_64.lib
DeformableSnow/Libraries/libs/rttr/: rttr_core.lib  rttr_core_d.lib  unit_test_base.lib  unit_test_base_d.lib
DeformableSnow/Resources/: engine_config.ini
DeformableSnow/Scripts/: ConfigGen.py  Utils.py
DeformableSnow/ToonResourceParser/: CMakeLists.txt  ToonResourceParser.vcxproj
DeformableSnow/ToonResourceParser/Includes/: INIParser.h
DeformableSnow/ToonResourceParser/Includes/constexpr/: BasicString.h  Map.h  StaticString.h  Utility.h  vector.h
DeformableSnow/ToonResourceParser/Sources/: main.cpp
dependencies/lib/: glfw3.lib  glfw3_d.lib
